# lamedh

./: .gitignore  AGENTS.md  BUG_QUICK_REFERENCE.md  CHANGELOG.md  CHANGELOG.md~  CLAUDE.md  CONTINUATIONS_COROUTINES_DESIGN.md  CORRECTNESS_REVIEW.md  CRITICAL_BUGS_REPORT.md  Cargo.toml  DETAILED_BUG_ANALYSIS.md  DYNAMIC_SCOPE_DESIGN.md  DYNAMIC_VARIABLES_SPEC.md  README.md  RESEARCH_SESSION_SUMMARY.md  SPAGHETTI_STACKS_HISTORY.md  VERIFIED_BUGS_SUMMARY.md  book.toml  lamedh-manual.md  llms.txt  prologue.lisp  todo.md
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: pages.yml  release.yml  rust.yml
ai/scripts/: README.md  cons_box_to_rc.sh  coverage.sh  fix_rc_deref_moves.sh  lib.sh  mk-issue.sh  queue.sh  triage-existing-issues.sh
benchmarks/: .gitignore  README.md  RESULTS.md  benchmark-0.3.1.md  compare-revisions.sh  run_benchmarks.sh
benchmarks/embedder/: README.md
benchmarks/embedder/rust/: Cargo.toml
benchmarks/embedder/rust/src/: main.rs
benchmarks/fibonacci/: compare_local.sh
benchmarks/levenshtein/: words.txt
benchmarks/realistic/: README.md  realistic-array.lisp  realistic-hashtable.lisp  realistic-jit.lisp  realistic-optjit.lisp  realistic.lisp
cli/: Cargo.toml
cli/src/: main.rs  mcp.rs
cli/tests/: check_cli.rs  fmt_cli.rs  fuel_cli.rs  mcp_cli.rs  test_cli.rs
docs/: SUMMARY.md  appendix_differences.md  appendix_function_index.md  appendix_limitations.md  appendix_special_forms_index.md  architecture.md  audit-0-3.md  check.md  cl-divergences.md  condensation.md  condensation.md~  condensation_library.md  condensation_next_steps.md  data_types.md  dogfood-0-3.md  embedding.md  environments.md  file_io.md  fmt.md  generated-function-index.md  generated-reference.md  getting_started.md  index.md  intent.md  introduction.md  language_reference.md  llms-txt-template.md  llms.md  llms.txt  mcp.md  npc_polymorphism.md  review-daily-driver-2026-07.md  roadmap_1_0.md  special_forms.md  standard_library.md  syntax.md  testing-cli.md  testing.md  typeclasses.md  typed-checker-design.md  (+2 more)
docs/eval/: position-deeper-unification.md  position-first-class-intent.md  response-first-class-intent.md
docs/functions/: arithmetic.md  bitwise.md  errors.md  hash_tables.md  io.md  lists.md  meta.md  plists.md  predicates.md  strings.md
docs/manual/: 01-getting-started.md  02-language-basics.md  03-data-structures.md  04-records-and-types.md  05-functions-and-evaluation.md  06-conditions-and-restarts.md  07-sandbox-guards-concurrency.md  08-patterns-and-metaprogramming.md  09-jit-and-embedding.md  10-modules.md  11-ports-and-io.md  12-codecs.md  13-networking.md  14-os.md  README.md  index.md
docs/spike/: typed_jit_spike.rs
examples/: defexpr_example.lisp  defmacro_example.lisp  dynamic_variables_examples.lisp  embedding.rs  game_demo.rs  npcs.lisp  oo-patterns.lisp  overflow_flags.lisp  typed_jit.rs  wordcount.lisp
examples/anagram-groups/: main.lisp
examples/bank-conditions/: main.lisp
examples/base-conversion/: main.lisp
examples/bfs-maze/: main.lisp
examples/binary-search/: main.lisp
examples/binary-search-tree/: main.lisp
examples/brainfuck/: main.lisp
examples/caesar-cipher/: main.lisp
examples/church-numerals/: main.lisp
examples/coin-change/: main.lisp
examples/collatz/: main.lisp
examples/dijkstra/: main.lisp
examples/fable/: main.lisp
examples/factorial/: main.lisp
examples/fibonacci/: main.lisp
examples/fizzbuzz/: main.lisp
examples/game/: README.md  ai.lisp  npcs.lisp
examples/game-of-life/: main.lisp
examples/huffman/: main.lisp
examples/knapsack/: main.lisp
examples/lamed-nebula/: main.lisp
examples/lazy-streams/: main.lisp
examples/levenshtein/: main.lisp
examples/lisp-in-lisp/: main.lisp
examples/longest-common-subsequence/: main.lisp
examples/lru-cache/: main.lisp
examples/macro-control/: main.lisp
examples/mandelbrot/: main.lisp
examples/matrix-algebra/: main.lisp
examples/mergesort/: main.lisp
examples/monte-carlo-pi/: main.lisp
examples/n-queens/: main.lisp
examples/newton-sqrt/: main.lisp
examples/ninety-nine-bottles/: main.lisp
examples/palindromes/: main.lisp
lib/: 00-core.lisp  01-list.lisp  02-cxr.lisp  03-meta.lisp  04-predicates.lisp  05-math.lisp  06-builtin-docs.lisp  06-require.lisp  07-shell.lisp  08-vau.lisp  09-lisp15.lisp  10-testing.lisp  11-optimizer-vau.lisp  12-control.lisp  13-functional.lisp  14-strings.lisp  15-sets-hash.lisp  16-conditions.lisp  17-arrays.lisp  18-format.lisp  19-call-graph.lisp  19-typeclasses.lisp  20-condensation.lisp  21-cl-compat.lisp  21-interfaces.lisp  21-typeclasses.lisp  22-guard.lisp  22-intent.lisp  23-match.lisp  24-rules.lisp  25-variants.lisp  26-instrument.lisp  27-modules.lisp  28-types.lisp  29-protocols.lisp  30-text.lisp  31-ports.lisp  32-base64.lisp  33-hex.lisp  34-url.lisp  (+13 more)
lithhp/: AGENTS.md  Cargo.toml  prologue.lisp
scripts/: gauntlet.sh  generate-docs.sh  generate-llms-txt.sh
src/: check.rs  environment.rs  evaluator.rs  fmt.rs  jit.rs  lib.rs  main.rs  optimizer.rs  printer.rs  reader.rs  teaching_errors.rs  test_runner.rs
tests/: brutal_correctness.rs  cxr_and_equal_test.rs  dynamic_variables_exhaustive_test.lisp  dynamic_variables_test.lisp  function.rs  list_functions_test.lisp  list_functions_test.rs  load_file_test_sample.lisp  prog_test.lisp  test_apply.rs  test_arithmetic.rs  test_backtraces.rs  test_base64.rs  test_bitwise.rs  test_bug_fixes.rs  test_call_function.rs  test_call_graph.rs  test_check.rs  test_collapse_frames.rs  test_compiled_m2.rs  test_condensation_checks.rs  test_condensation_metadata.rs  test_condensation_typecheck.rs  test_condense_change.rs  test_control_flow.rs  test_conversions.rs  test_correctness_edge_cases.rs  test_critical_bugs.rs  test_daily_driver_fixes.rs  test_defconcept.rs  test_defrecord.rs  test_defrecord_sections.rs  test_defstruct.rs  test_defun_star.rs  test_derive.rs  test_derive_lens.rs  test_derived_schemes.rs  test_dynamic_variables.rs  test_dynamic_variables_exhaustive.rs  test_environment_coverage.rs  (+103 more)
(+110 files in other folders)
