[package]
name = "lamedh"
version = "0.2.0"
edition = "2024"
description = "An embeddable Lisp 1.5 interpreter written in Rust"
license = "AGPL-3.0"
# The library crate. The CLI/REPL driver lives in the `lamedh-cli` member.
[lib]
name = "lamedh"
path = "src/lib.rs"

[dependencies]
nom = "=7.1.3"

# Native-code (Cranelift) backend for the typed JIT (`deffun-typed`). On by
# default as of 0.2.0; build with `--no-default-features` for the dependency-light
# closure-only backend (the typed core still type-checks and runs, just without
# native codegen).
cranelift-jit = { version = "0.133", optional = true }
cranelift-module = { version = "0.133", optional = true }
cranelift-codegen = { version = "0.133", optional = true }
cranelift-frontend = { version = "0.133", optional = true }

[features]
default = ["jit"]
jit = [
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
]
# Enable this feature to replace Rc->Arc and RefCell->RwLock for shared
# LispVal inner types (Cons, Symbol, HashTable, Array) and Environment.
# This uses atomic reference counting at the cost of higher overhead per
# clone.  The default (single-threaded) build is unchanged.  Note: LispVal
# is NOT automatically Send+Sync with this feature because SharedState
# contains Cell<bool>; this feature is a stepping stone, not a full
# multi-threading solution.
arc-val = []
# Concurrency primitives: make-channel, channel-send, channel-recv,
# channel-recv-timeout, clone-interpreter.  Implies arc-val semantics once
# that flag is implemented; for now values cross thread boundaries via printer/
# reader serialisation so no external dependencies are required.
concurrency = []

[workspace]
members = ["cli"]
default-members = [".", "cli"]
# Benchmark comparison crates are standalone; they are built directly by
# benchmarks/run_benchmarks.sh and are not part of this workspace.
exclude = [
    "benchmarks/fibonacci/rust",
    "benchmarks/loops/rust",
    "benchmarks/levenshtein/rust",
]
