[package]
name = "lamedh"
version = "0.4.0"
edition = "2024"
description = "An embeddable Lisp 1.5 interpreter written in Rust"
license = "AGPL-3.0-only"
repository = "https://github.com/pnathan/lamedh"
homepage = "https://github.com/pnathan/lamedh"
documentation = "https://pnathan.github.io/lamedh/"
# The library crate. The CLI/REPL driver lives in the `lamedh-cli` member.
[lib]
name = "lamedh"
path = "src/lib.rs"

[dependencies]
nom = "=7.1.3"
smallvec = "1"
regex = "1"

# Native-code (Cranelift) backend for the typed JIT (`deffun-typed`). On by
# default as of 0.2.0; build with `--no-default-features` for the dependency-light
# closure-only backend (the typed core still type-checks and runs, just without
# native codegen).
cranelift-jit = { version = "0.133", optional = true }
cranelift-module = { version = "0.133", optional = true }
cranelift-codegen = { version = "0.133", optional = true }
cranelift-frontend = { version = "0.133", optional = true }

# TLS port wrapping (issue #365, epic #253). Off by default -- an owner
# dependency ruling (see #364/#365) picked rustls specifically so the
# default, dependency-light build stays exactly as it was: none of these
# three crates (nor their transitive crypto-provider deps) are pulled in,
# compiled, or even resolved unless `--features net-tls` is passed. `ring`
# is the selected crypto provider (pure-Rust-plus-assembly, no cmake/nasm
# build tool required, unlike the `aws-lc-rs` alternative) -- see
# src/evaluator/builtins_tls.rs's module header for the full ruling.
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
webpki-roots = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
# Test-only: generates a throwaway self-signed CA + leaf cert for the
# loopback TLS integration tests (tests/test_tls.rs). Never built for a
# normal `cargo build`/`cargo install` -- dev-dependencies are excluded from
# that graph, so this does not affect the net-tls feature's "off by default"
# story for embedders.
rcgen = "0.13"

[features]
default = ["jit", "concurrency"]
jit = [
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
]
# TLS port wrapping (issue #365, epic #253): rustls-backed tls: module
# (lib/43-tls.lisp) plus https:// support in the http: module. OFF BY
# DEFAULT per the owner's dependency ruling -- the default build's behavior
# and dependency tree are unchanged. With this feature compiled out, the
# TLS-* kernel builtins are still bound (so `(require 'tls)` still loads
# cleanly and `tls:*` names still exist) but every one of them signals a
# structured `:category :tls-unavailable` error instead of doing any work;
# https:// keeps today's `:category :https-unsupported` error either way
# until this feature is compiled in. See src/evaluator/builtins_tls.rs.
net-tls = ["dep:rustls", "dep:webpki-roots", "dep:rustls-pemfile"]
# Enable this feature to replace Rc->Arc and RefCell->RwLock for shared
# LispVal inner types (Cons, Symbol, HashTable, Array) and Environment.
# This uses atomic reference counting at the cost of higher overhead per
# clone.  The default (single-threaded) build is unchanged.  Note: LispVal
# is NOT automatically Send+Sync with this feature because SharedState
# contains Cell<bool>; this feature is a stepping stone, not a full
# multi-threading solution.
arc-val = []
# Concurrency primitives: make-channel, channel-send, channel-recv,
# channel-recv-timeout, clone-interpreter.  Implies arc-val semantics once
# that flag is implemented; for now values cross thread boundaries via printer/
# reader serialisation so no external dependencies are required.
concurrency = []
# The randomized JIT differential/metamorphic fuzz battery
# (`tests/brutal_correctness.rs`) is gated OFF by default: it is minutes of
# random-program tier-agreement checking that has no place taxing every
# `cargo test`. Dev/agent iteration runs without it; the authoritative ship
# gauntlet (`scripts/gauntlet.sh`) and CI run `--features fuzz` in release
# (where the same battery is seconds, not minutes). `BRUTAL=1` still scales
# every batch up to its deep sweep.
fuzz = []

[workspace]
members = ["cli"]
default-members = [".", "cli"]
# Benchmark comparison crates are standalone; they are built directly by
# benchmarks/run_benchmarks.sh and are not part of this workspace.
exclude = [
    "benchmarks/fibonacci/rust",
    "benchmarks/loops/rust",
    "benchmarks/levenshtein/rust",
    "benchmarks/realistic/rust",
    "benchmarks/embedder/rust",
]
