[package]
name = "lamedh-cli"
version = "0.2.0"
edition = "2024"
description = "REPL and command-line driver for the Lamedh Lisp 1.5 interpreter"

# Produce a binary called `lamedh` (the crate is `lamedh-cli`).
[[bin]]
name = "lamedh"
path = "src/main.rs"
doc = false

[dependencies]
lamedh = { path = "..", default-features = false }
rustyline = "14.0.0"
clap = { version = "4.5.4", features = ["derive"] }

[features]
default = ["jit"]
jit = ["lamedh/jit"]
