[package]
name = "lamedh-cli"
version = "0.4.0"
edition = "2024"
description = "REPL and command-line driver for the Lamedh Lisp 1.5 interpreter"
license = "AGPL-3.0-only"
repository = "https://github.com/pnathan/lamedh"
homepage = "https://github.com/pnathan/lamedh"
documentation = "https://pnathan.github.io/lamedh/"

# Produce a binary called `lamedh` (the crate is `lamedh-cli`).
[[bin]]
name = "lamedh"
path = "src/main.rs"
doc = false

[dependencies]
lamedh = { path = "..", default-features = false }
rustyline = "14.0.0"
clap = { version = "4.5.4", features = ["derive"] }
dirs = "6"
serde_json = "1"

[features]
default = ["jit"]
jit = ["lamedh/jit"]
